--- a/playGrd/lab4/HelloWorld/DockerinDjango/Dockerfile
+++ b/playGrd/lab4/HelloWorld/DockerinDjango/Dockerfile
@@ -8,5 +8,5 @@ WORKDIR /app
 
 EXPOSE 8000
 
-ENTRYPOINT ["python", "DockerinDjango/manage.py"]
+ENTRYPOINT ["python", "manage.py"]
 CMD ["runserver", "0.0.0.0:8000"]
